change some theming for make 2019

--- a/app/client/views/team/team.html
+++ b/app/client/views/team/team.html
@@ -37,7 +37,7 @@
 
           <div class="field">
             <button
-              class="ui fluid pink button"
+              class="ui fluid red button"
               ng-click="joinTeam()">
               Join or Create Team
             </button>
