--- a/app/client/stylesheets/_custom.scss
+++ b/app/client/stylesheets/_custom.scss
@@ -1,3 +1,7 @@
 // Branding overrides
 //
 // Copy variables from `_branding.scss` to this file to override default values.
+
+$primary: #30c5d5;
+$secondary: #e55e5e;
+$tertiary: #f5c73a;
