--- a/app/client/views/admin/user/user.html
+++ b/app/client/views/admin/user/user.html
@@ -149,7 +149,7 @@
            ng-hide="isMitStudent">
         <p>
           Because of limitations imposed by MIT, we are not legally allowed to host
-          non-MIT minors (those under 18) for HackMIT 2015. Checking the box below affirms that you are or will be 18 years or older by September 19th, 2015.
+          non-MIT minors (those under 18) for MakeMIT 2019. Checking the box below affirms that you are or will be 18 years or older by September 19th, 2015.
         </p>
         <p>
           <strong>
